# CICD

.github/workflows/: ci-pipeline.yml
mlops/: README.md  pyproject.toml
mlops/tests/: test_example.py
