[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops"
version = "0.0.1"
description = "A demo package for MLOPS Course @ UVG"
authors = [
    { name = "Alfonso RO", email = "arodriguezo@uvg.edu.gt" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/your-username/my_math_package"
